--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,16 @@ regex = "0.2"
 
 reqwest = "0.7"
 
-rocket = "0.3"
-rocket_codegen = "0.3"
-rocket_contrib = "0.3"
+diesel = { version = "0.14.0", features = ["postgres", "uuid"] }
+diesel_codegen = { version = "0.14.0", features = ["postgres"] }
+dotenv = "0.9.0"
+
+rocket = "0.3.1"
+rocket_codegen = "0.3.1"
+rocket_contrib = "0.3.1"
 
 serde = "1"
 serde_derive = "1"
 serde-xml-rs = "0.2.0"
 
-uuid = {version = "0.5", features = ["serde", "v4"]}
+uuid = { version = "0.5", features = [ "serde", "v4" ] }
